[metadata]
name = threads-insights-sdk
version = 0.1.0
author = Dmitrii Annenkov
author_email = d.annenkov97@gmail.com
description = A Python client for Threads Insights
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/annenkovdmitrii/Threads-Insights-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    pandas
    python-dotenv